--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -20,7 +20,7 @@ encrypt_directory=false
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
@@ -34,7 +34,7 @@ codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
 application/icon="res://icon.png"
-application/console_wrapper_icon="res://icon.png"
+application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
